--- a/src/css/button.css
+++ b/src/css/button.css
@@ -8,7 +8,7 @@
   background-color: #c0f5eb;
   color: #416468;
   flex: 1;
-  outline: 3px solid #ffffff;
+  border: 2px solid hsl(0, 0%, 100%);
   cursor: pointer;
 }
 
